--- a/index.html
+++ b/index.html
@@ -53,7 +53,56 @@
                   <label for="inputState" class="form-label">State</label>
                   <select id="inputState" class="form-select">
                     <option selected>Pick a state</option>
-                    <option>...</option>
+                    <option> Álava</option>
+                    <option> Albacete</option>
+                    <option> Alicante</option>
+                    <option> Almería</option>
+                    <option> Asturias</option>
+                    <option> Ávila</option>
+                    <option> Badajoz</option>
+                    <option> Baleares (Islas)</option>
+                    <option> Barcelona</option>
+                    <option> Burgos</option>
+                    <option> Cáceres</option>
+                    <option> Cádiz</option>
+                    <option> Cantabria</option>
+                    <option> Castellón</option>
+                    <option> Ciudad Real</option>
+                    <option> Córdoba</option>
+                    <option> Coruña (La)</option>
+                    <option> Cuenca</option>
+                    <option> Girona</option>
+                    <option> Granada</option>
+                    <option> Guadalajara</option>
+                    <option> Guipúzcoa</option>
+                    <option> Huelva</option>
+                    <option> Huesca</option>
+                    <option> Jaén</option>
+                    <option> León</option>
+                    <option> Lleida</option>
+                    <option> Lugo</option>
+                    <option> Madrid</option>
+                    <option> Málaga</option>
+                    <option> Murcia</option>
+                    <option> Navarra</option>
+                    <option> Ourense</option>
+                    <option> Palencia</option>
+                    <option> Palmas (Las)</option>
+                    <option> Pontevedra</option>
+                    <option> Rioja (La)</option>
+                    <option> Salamanca</option>
+                    <option> Santa Cruz de Tenerife</option>
+                    <option> Segovia</option>
+                    <option> Sevilla</option>
+                    <option> Soria</option>
+                    <option> Tarragona</option>
+                    <option> Teruel</option>
+                    <option> Toledo</option>
+                    <option> Valencia</option>
+                    <option> Valladolid</option>
+                    <option> Vizcaya</option>
+                    <option> Zamora</option>
+                    <option> Zaragoza</option>
                   </select>
                 </div>
                 <div class="col-md-3">
